<resources>
    <string name="app_name">ParkingSystemApp</string>
    <string name="logo_image">ParkSpot</string>
    <string name="login_image_background">ParkSpot</string>
    <string name="logo_text">ParkSpot</string>
    <string name="SignIn_button">Sign In</string>
    <string name="prompt_email_username">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_again_password">Password Again</string>
    <string name="prompt_phone">Phone</string>
    <string name="register_button">Register</string>
    <string name="invalid_prompt">X Icon</string>
    <string name="username_less_than_3">Username is less than 3</string>
    <string name="username_greater_than_12">Username is greater than 12</string>
    <string name="not_equals_passwords">The passwords are not equal</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="osm_map">OSM Map</string>
    <!--    <string name="title_activity_login">LoginActivity</string>-->
    <!--    <string name="prompt_email">Email</string>-->
    <!--    <string name="prompt_password">Password</string>-->
    <!--    <string name="action_sign_in">Sign in or register</string>-->
    <!--    <string name="welcome">"Welcome !"</string>-->
    <!--    <string name="invalid_username">Not a valid username</string>-->
    <string name="invalid_password">Password must be > 8 characters</string>
    <string name="the_password_has_less_than_8_symbols">The password has less than 8 symbols</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="login_failed">"Login failed"</string>-->
</resources>