<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.SignUpActivity">

  <EditText
      android:id="@+id/register_username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="150dp"
      android:autofillHints=""
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:hint="@string/prompt_username"
      android:inputType="text"
      android:minWidth="250dp"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/register_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="250dp"
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:autofillHints=""
      android:hint="@string/prompt_name"
      android:inputType="text"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_username"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/register_surname"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="250dp"
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:autofillHints=""
      android:hint="@string/prompt_surname"
      android:inputType="text"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_name"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/register_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="250dp"
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:autofillHints=""
      android:hint="@string/prompt_email_username"
      android:inputType="textEmailAddress"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_surname"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/register_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="250dp"
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:autofillHints=""
      android:hint="@string/prompt_phone"
      android:inputType="phone"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_email"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/register_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="250dp"
      android:autofillHints=""
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:hint="@string/prompt_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_phone"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/register_again_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="250dp"
      android:background="@drawable/rounded_text_field"
      android:drawablePadding="8dp"
      android:ems="10"
      android:fontFamily="@font/abril_fatface"
      android:autofillHints=""
      android:hint="@string/prompt_again_password"
      android:inputType="textPassword"
      android:textColor="@color/black"
      android:textColorHint="#792D9B"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_password"
      tools:ignore="TouchTargetSizeCheck" />

  <Button
      android:id="@+id/register_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:minWidth="150dp"
      android:text="@string/register_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_again_password" />

  <ImageView
      android:id="@+id/x_icon"
      android:layout_width="14dp"
      android:layout_height="16dp"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@android:drawable/ic_delete"
      android:visibility="gone"
      tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>