<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.SignInActivity">

    <!-- Email Field -->
    <EditText
        android:id="@+id/email_prompt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="372dp"
        android:autofillHints="email"
        android:background="@drawable/rounded_text_field"
        android:drawablePadding="8dp"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/prompt_email_username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#792D9B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields,TouchTargetSizeCheck" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password_prompt"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_text_field"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#792D9B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_prompt"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/sign_in_action"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/SignIn_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_prompt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_action" />

</androidx.constraintlayout.widget.ConstraintLayout>
